--- a/Html/index.html
+++ b/Html/index.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width , initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <h4>Heading</h4>
-    <h5>Heading</h5>
-    <h6>Heading</h6>
-    <p>
-      Lorem500jdbwyc yehwgduq iquw9i vxyfcwg vt2ufygx ytdgwhjsudgychbx
-      yegchjwsioqw guehdswjiuehdybxsnudhjiwnwijs
-    </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-    <span>jedhei</span>
-    <span>uegyerbe</span>
+  <h1>Heading</h1>
+  <h2>Heading</h2>
+  <h3>Heading</h3>
+  <h4>Heading</h4>
+  <h5>Heading</h5>
+  <h6>Heading</h6>
 
-     <span>gyed</span>
-     <span>uhwdji</span>
- 
-     <div>   <span></span> <centre></centre>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+    Illo ducimus itaque nesciunt officiis nobis aspernatur nam
+    earum unde impedit corrupti sint quo fugiat nemo dicta beatae
+    minima, alias, recusandae aut.
+  </p>
 
-    <iframe
+  <span>jedhei</span>
+  <span>uegyerbe</span>
+  <span>gyed</span>
+  <span>uhwdji</span>
+
+  <div>
+    <span></span>
+
+    <div>
+      <p>hello para</p>
+      <section>
+        <p>hello world</p>
+      </section>
+    </div>
+  </div>
+
+  <button type="submit">Submit</button>
+  <button type="reset">Reset</button>
+
+  <iframe
     src="https://codehubnexus.com/"
-    width="600px"
-    height="900px"
-    frameborder="0"></iframe>
-<form action="">
-  <label for="Name">Name</label>
-  <input type="text" id="Name" minlength="5" maxlength="10" required/>    
-  <input type="email" name="" required/>    
-  <input type="password" name="" id="" required/>    
-  <input type="number" min="3" max="6" required/>    
-  <button type="submit" required>Submit</button>    
+    width="1200px"
+    height="500px"
+    frameborder="0">
+  </iframe>
 
-</form>
-  </body>
+  <form class="b" id="form1">
+    <label for="username">Name</label>
+    <input type="text" id="username" minlength="5" maxlength="10" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" required>
+
+    <label for="mobile">Mobile</label>
+    <input type="number" id="mobile" required>
+
+    <button type="submit">Submit</button>
+  </form>
+
+</body>
 </html>
